--- a/config/config.yaml
+++ b/config/config.yaml
@@ -95,9 +95,9 @@ segment_display_player:
       action: no_flash
 
 digital_outputs:
-    game_over_relay:
-        number: 1
-        type: light
+    flipper_enabling_relay:
+        type: driver
+        number: 16
         enable_events: ball_started
         disable_events: ball_will_end
 
