--- a/config/config.yaml
+++ b/config/config.yaml
@@ -115,6 +115,7 @@ playfields:
   playfield:
     default_source_device: bd_drain
     tags: default
+    enable_ball_search: True
 
 lights:
   l_bonus_10000:
@@ -323,20 +324,9 @@ autofire_coils:
     ac_right_saucer:
         coil: c_right_saucer
         switch: s_right_saucer
-    ac_chime_thumper_left:
-        coil: c_chime_1000
-        switch: s_thumper_left
-    ac_chime_thumper_right:
-        coil: c_chime_1000
-        switch: s_thumper_right
-    ac_chime_thumper_center:
-        coil: c_chime_1000
-        switch: s_thumper_center
-
-
-
-
+    
 
 modes:
   - base
+  - bonus
 
