--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -7,7 +7,7 @@ mode:
 
 variable_player:
   s_adv_bounus_roll_over_active:
-    bonus_count: 1
+    bonus: 1
       
 score_queue_player:
   score_10_points:
@@ -42,4 +42,28 @@ score_queue_player:
     score: 1000
   score_advance_bonus:
     score: 1000
+
+light_player:
+  "{current_player.bonus%10>=1}":
+    l_bonus_10000: on
+  "{current_player.bonus%10>=2}":
+    l_bonus_20000: on
+  "{current_player.bonus%10>=3}":
+    l_bonus_30000: on
+  "{current_player.bonus%10>=4}":
+    l_bonus_40000: on
+  "{current_player.bonus%10>=5}":
+    l_bonus_50000: on
+  "{current_player.bonus%10>=6}":
+    l_bonus_60000: on
+  "{current_player.bonus%10>=7}":
+    l_bonus_70000: on
+  "{current_player.bonus%10>=8}":
+    l_bonus_80000: on
+  "{current_player.bonus%10>=9}":
+    l_bonus_90000: on
+  "{current_player.bonus>=10}":
+    l_bonus_100000: on
+
+  
   
