--- a/modes/attract/shows/attract_light_show.yaml
+++ b/modes/attract/shows/attract_light_show.yaml
@@ -9,7 +9,7 @@
     l_right_outlane_extra_ball: 00 
     l_top_pop_bumpers: ff
     l_bottom_pop_bumper: ff
-    l_double_bonus_when_list: ff
+    l_double_bonus_when_lit: ff
     l_left_outlane_special_when_list: ff
     l_right_outlane_special_when_list: ff
     l_triple_bonus_when_list: ff
@@ -22,7 +22,7 @@
     l_right_outlane_extra_ball: ff
     l_top_pop_bumpers: 00 
     l_bottom_pop_bumper: 00  
-    l_double_bonus_when_list: 00 
+    l_double_bonus_when_lit: 00 
     l_left_outlane_special_when_list: 00 
     l_right_outlane_special_when_list: 00 
     l_triple_bonus_when_list: 00 
