--- a/modes/base/config/base.yaml
+++ b/modes/base/config/base.yaml
@@ -12,12 +12,18 @@ variable_player:
       action: set
     saucer_feature_scores_50k:
       int: 0
-      action: set 
+      action: set
+    saucer_feature_lites_double_bonus:
+      int: 0
+      action: set
     spinner_multiplier:
       int: 1
       action: set
     saucer_feature_is_enabled: 
       int: 1
+      action: set
+    lite_double_bonus:
+      int: 0
       action: set
   s_adv_bounus_roll_over_active:
     bonus: 1
@@ -35,6 +41,36 @@ variable_player:
     saucer_feature_scores_50k:
       int: 2
       action: set
+    saucer_feature_lites_double_bonus:
+      int: 1
+      action: set
+  enable_double_bonus:
+    saucer_feature_lites_double_bonus:
+      int: 2
+      action: set
+    lite_double_bonus:
+      int: 1
+      action: set
+    saucer_feature_lites_extra_ball:
+      int: 1
+      action: set
+  enable_lite_extra_ball:
+    saucer_feature_lites_extra_ball:
+      int: 2
+      action: set
+    lite_extra_ball:
+      int: 1
+      action: set
+    saucer_feature_lites_top_center_hole:
+      int: 1
+      action: set
+  enable_lite_triple_bonus_collect:
+    saucer_feature_lites_top_center_hole:
+      int: 2
+      action: set
+    lite_triple_bonus_collect:
+      int: 1
+      action: set
     saucer_feature_is_enabled:
       int: 0
       action: set
@@ -50,21 +86,39 @@ queue_relay_player:
   balldevice_bd_right_saucer_ball_eject_attempt:
     post: right_saucer_feature_started
     wait_for: right_saucer_feature_ended
+  balldevice_bd_top_saucer_ball_eject_attempt:
+    post: top_saucer_feature_started
+    wait_for: top_saucer_feature_ended
+
 
 event_player:
-  right_saucer_feature_started.1{current_player.saucer_feature_is_enabled==0}: 
-    - right_saucer_feature_ended
-  right_saucer_feature_started.2{current_player.saucer_feature_lite_spinner==1}:
+  right_saucer_feature_started: 
     - start_score_5k
-  right_saucer_feature_started.3{current_player.saucer_feature_scores_50k==1}:
-    - start_score_5k
+  top_saucer_feature_started:
+    - start_top_score_5k
   timer_score_5k_tick:
     - score_1k
-  timer_score_5k_complete.1{current_player.saucer_feature_lite_spinner==1}:
+  timer_top_score_5k_tick:
+    - score_1k
+  timer_top_score_5k_complete:
+    - top_saucer_feature_ended
+  timer_score_5k_complete.1{current_player.saucer_feature_is_enabled==0}:
+    - right_saucer_feature_ended
+  timer_score_5k_complete.2{current_player.saucer_feature_lite_spinner==1}:
     - enable_lite_spinner
     - right_saucer_feature_ended
-  timer_score_5k_complete.2{current_player.saucer_feature_scores_50k==1}:
+  timer_score_5k_complete.3{current_player.saucer_feature_scores_50k==1}:
     - start_score_50k
+  timer_score_5k_complete.4{current_player.saucer_feature_lites_double_bonus==1}:
+    - enable_double_bonus 
+    - right_saucer_feature_ended
+  timer_score_5k_complete.5{current_player.saucer_feature_lites_extra_ball==1}:
+    - enable_lite_extra_ball 
+    - right_saucer_feature_ended
+  timer_score_5k_complete.6{current_player.saucer_feature_lites_top_center_hole==1}:
+    - enable_lite_triple_bonus_collect
+    - right_saucer_feature_ended
+
   timer_score_50k_tick:
     - score_10k
   timer_score_50k_complete:
@@ -81,6 +135,14 @@ timers:
     control_events:
       - action: restart
         event: start_score_5k 
+  top_score_5k:
+    start_value: 5 
+    end_value: 0
+    direction: down
+    tick_interval: 250ms
+    control_events:
+      - action: restart
+        event: start_top_score_5k 
   score_50k:
     start_value: 5 
     end_value: 0
@@ -153,8 +215,53 @@ show_player:
         saucer_feature_scores_50kShow: stop
     player_saucer_feature_scores_50k{value==0}:
         saucer_feature_scores_50kShow: stop
+    player_saucer_feature_lites_double_bonus{value==1}:
+        flashing:
+            show_tokens:
+                lights: l_saucer_feature_lites_double_bonus
+            key: saucer_feature_lites_double_bonusShow
+            action: play
+            priority: 100
+            speed: 5
+    player_saucer_feature_lites_double_bonus{value==2}:
+        saucer_feature_lites_double_bonusShow: stop
+    player_saucer_feature_lites_double_bonus{value==0}:
+        saucer_feature_lites_double_bonusShow: stop
+    player_saucer_feature_lites_extra_ball{value==1}:
+        flashing:
+            show_tokens:
+                lights: l_saucer_feature_lites_extra_ball_lane
+            key: saucer_feature_lites_extra_ballShow
+            action: play
+            priority: 100
+            speed: 5
+    player_saucer_feature_lites_extra_ball{value==2}:
+        saucer_feature_lites_extra_ballShow: stop
+    player_saucer_feature_lites_extra_ball{value==0}:
+        saucer_feature_lites_extra_ballShow: stop
+    player_saucer_feature_lites_top_center_hole{value==1}:
+        flashing:
+            show_tokens:
+                lights: l_lites_triple_bonus_when_list
+            key: saucer_feature_lites_top_center_holeShow
+            action: play
+            priority: 100
+            speed: 5
+    player_saucer_feature_lites_top_center_hole{value==2}:
+        saucer_feature_lites_top_center_holeShow: stop
+    player_saucer_feature_lites_top_center_hole{value==0}:
+        saucer_feature_lites_top_center_holeShow: stop
+
+
 
 light_player:
+  "{current_player.lite_double_bonus==1}":
+    l_double_bonus_when_lit: on
+  "{current_player.lite_extra_ball==1}":
+    l_left_outlane_extra_ball: on 
+    l_right_outlane_extra_ball: on
+  "{current_player.lite_triple_bonus_collect==1}":
+    l_triple_bonus_when_list: on
   "{current_player.saucer_feature_lite_spinner==2}":
     l_saucer_feature_lite_spinner: on
   "{current_player.saucer_feature_scores_50k==2}":
