--- a/config/config.yaml
+++ b/config/config.yaml
@@ -8,8 +8,11 @@ hardware:
 lisy:
   connection: network
   network_port: 5963
-  poll_hz: 50
-  network_host: "192.168.7.48"
+  poll_hz: 100 
+  # PI3 
+  network_host: "192.168.7.60"
+  # PIZero
+  #network_host: "192.168.7.60"
 
 player_vars:
   multiplier:
@@ -72,7 +75,7 @@ segment_display_player:
     display4:
       text: " "
 
-# show score when adding players
+  # show score when adding players
   player_added.1{num==1}:
     display1:
       text: "{players[0].score:d}"
@@ -87,9 +90,6 @@ segment_display_player:
       text: "{players[3].score:d}"
 
 # clear only display0 after game
-  game_ended:
-    display0:
-      text: ""
   game_ended{machine.player1_score > 0}:
     display1:
       text: "{machine.player1_score:d}"
@@ -102,45 +102,47 @@ segment_display_player:
   game_ended{machine.player4_score > 0}:
     display4:
       text: "{machine.player4_score:d}"
+      
+  player_score.1{change>0}:
+    display1:
+      action: no_flash
+  player_score.2{change>0}:
+    display2:
+      action: no_flash
+  player_score.3{change>0}:
+    display3:
+      action: no_flash
+  player_score.4{change>0}:
+    display4:
+      action: no_flash
+
 
 #flash display on player turn
   player_turn_started.1{number==1}:
     display1:
       action: flash
-  player_score_changed.1{player_num==1}:
+  player_turn_ended.3{number==1}:
     display1:
       action: no_flash
-  player_turn_ended.1{number==1}:
-    display1:
-      action: no_flash
-  player_turn_started.2{number==2}:
+  player_turn_started.4{number==2}:
     display2:
       action: flash
-  player_score_changed.2{player_num==2}:
+  player_turn_ended.6{number==2}:
     display2:
       action: no_flash
-  player_turn_ended.2{number==2}:
-    display2:
-      action: no_flash
-  player_turn_started.3{number==3}:
+  player_turn_started.7{number==3}:
     display3:
       action: flash
-  player_score_changed.3{player_num==3}:
+  player_turn_ended.9{number==3}:
     display3:
       action: no_flash
-  player_turn_ended.3{number==3}:
-    display3:
-      action: no_flash
-  player_turn_started.4{number==4}:
+  player_turn_started.10{number==4}:
     display4:
       action: flash
-  player_score_changed.4{player_num==4}:
+  player_turn_ended.12{number==4}:
     display4:
       action: no_flash
-  player_turn_ended.4{number==4}:
-    display4:
-      action: no_flash
-
+  
 digital_outputs:
     flipper_enabling_relay:
         type: driver
@@ -160,11 +162,11 @@ ball_devices:
   bd_right_saucer:
     ball_switches: s_right_saucer
     eject_coil: c_right_saucer
-    eject_timeouts: 2s
+    eject_timeouts: 3s
   bd_top_saucer:
     ball_switches: s_top_saucer
     eject_coil: c_top_saucer
-    eject_timeouts: 2s
+    eject_timeouts: 3s
 
 
 playfields:
@@ -417,7 +419,7 @@ autofire_coils:
         switch: s_thumper_center
     ac_slingshot_right:
         coil: c_thumper_right
-        switch: s_thumper_right
+        switch: s_slingshot_right
     ac_slingshot_leftscore:
         coil: c_slingshot_left
         switch: s_slingshot_left
